# cinstall

./: Cargo.toml  README.md  list.txt  scrape_project_info.py
src/: installer.rs  main.rs  pkg_reg.json  registry.rs
